--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/estilos.css">
 
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <!-- End Google Fonts-->
+
+        <link rel="shortcut icon", href="img/favicon.ico">
         <title>Cargo Express</title>
     </head>
 
@@ -31,19 +43,19 @@
                 <div class="quen-somos">
                     <p class="titulo"> Cargas Express: Conectando Pessoas e Negócios com Excelências</p>
 
-                    <p> Fundada en 2005, a Cargas Express nasceu com o objetivo de transforma
-                        o transporte de mercadorias no Brasil, oferecendo soluções ágeis, seguras e confiáveis.
-                        O que começou como uma pequena operação regional cresceu rapidamente, gracas ao compromisso
-                        com a qualidade e à dedicação em atender às necessidades específicas de cada cliente.</p>
-
+                    <p>Fundada em 2005, a Cargas Express nasceu com o objetivo de transforma
+                    o transporte de mercadorias no Brasil, oferecendo soluções ágeis, seguras e confiáveis.
+                    O que começou como uma pequena operação regional cresceu rapidamente, gracas ao compromisso
+                    com a qualidade e à dedicação em atender às necessidades específicas de cada cliente.</p>
+                    <br>
                     <p>Ao longo dos anos, investimos en tecnologia de ponta, ampliamos nossa frota e construinos
-                        uma equipe de profissionais altamente qualificados. Hoje, terms orgulho de ser referência no setor,
-                        transportando desde pequenas encomendas até grandes volumes com eficiència e cuidado,
-                        conectando negócios e pessoas por todo o território nacional.</p>
-
+                    uma equipe de profissionais altamente qualificados. Hoje, temos orgulho de ser referência no setor,
+                    transportando desde pequenas encomendas até grandes volumes com eficiència e cuidado,
+                    conectando negócios e pessoas por todo o território nacional.</p>
+                    <br>
                     <p>Nosso legado é construido com base na confiança de nossos clientes, na inovação constante e no
-                        compromisso en entregar mais do que mercadorias: entregamos tranquilidade e resultados.</p>
-
+                    compromisso en entregar mais do que mercadorias: entregamos tranquilidade e resultados.</p>
+                    <br>
                     <p><span>Escolha a Cargas Express e faça parte dessa história de sucesso. Solicite seu orcasento agoral</span></p>
                 </div>
             </div>
@@ -80,7 +92,7 @@
                 <div class="bloco-servicos">
                     <img src="img/icone04.png">
                     <h2>transporte de veículos</h2>
-                    p>Precisa de um serviço de transporte de cargas exclusivas?<br> <
+                    <p>Precisa de um serviço de transporte de cargas exclusivas?<br>
                     Nos podemos te atender. Transportadora com uma ampla rede de atendimento e com anos de experiência no mercado</p>
                 </div>
 
