Fix portuguese typos

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p>Nosso legado é construido com base na confiança de nossos clientes, na inovação constante e no
                     compromisso en entregar mais do que mercadorias: entregamos tranquilidade e resultados.</p>
                     <br>
-                    <p><span>Escolha a Cargas Express e faça parte dessa história de sucesso. Solicite seu orcasento agoral</span></p>
+                    <p><span>Escolha a Cargas Express e faça parte dessa história de sucesso. Solicite seu orçamento agora!</span></p>
                 </div>
             </div>
 
@@ -86,14 +86,14 @@
                     <img src="img/icone03.png">
                     <h2>transporte aéreo</h2>
                     <p>Precisa de um serviço de transporte de cargas exclusivas?<br>
-                    liós podemos te atender. Transportadora com uma ampla rede de atendimento e com anos de experiência no mercado</p>
+                    Nós podemos te atender. Transportadora com uma ampla rede de atendimento e com anos de experiência no mercado</p>
                 </div>
 
                 <div class="bloco-servicos">
                     <img src="img/icone04.png">
                     <h2>transporte de veículos</h2>
                     <p>Precisa de um serviço de transporte de cargas exclusivas?<br>
-                    Nos podemos te atender. Transportadora com uma ampla rede de atendimento e com anos de experiência no mercado</p>
+                    Nós podemos te atender. Transportadora com uma ampla rede de atendimento e com anos de experiência no mercado</p>
                 </div>
 
                 <div class="bloco-servicos">
