--- a/index.html
+++ b/index.html
@@ -39,25 +39,29 @@
             </div>
 
             <div class="quem-somos">
+                <p class="titulo"> Cargas Express: Conectando Pessoas e Negócios com Excelências</p>
 
-                <div class="quen-somos">
-                    <p class="titulo"> Cargas Express: Conectando Pessoas e Negócios com Excelências</p>
-
-                    <p>Fundada em 2005, a Cargas Express nasceu com o objetivo de transforma
+                <p>
+                    Fundada em 2005, a Cargas Express nasceu com o objetivo de transforma
                     o transporte de mercadorias no Brasil, oferecendo soluções ágeis, seguras e confiáveis.
                     O que começou como uma pequena operação regional cresceu rapidamente, gracas ao compromisso
-                    com a qualidade e à dedicação em atender às necessidades específicas de cada cliente.</p>
+                    com a qualidade e à dedicação em atender às necessidades específicas de cada cliente.
+                </p>
                     <br>
-                    <p>Ao longo dos anos, investimos en tecnologia de ponta, ampliamos nossa frota e construinos
+                    
+                <p>
+                    Ao longo dos anos, investimos en tecnologia de ponta, ampliamos nossa frota e construinos
                     uma equipe de profissionais altamente qualificados. Hoje, temos orgulho de ser referência no setor,
                     transportando desde pequenas encomendas até grandes volumes com eficiència e cuidado,
-                    conectando negócios e pessoas por todo o território nacional.</p>
+                    conectando negócios e pessoas por todo o território nacional.
+                </p>
                     <br>
-                    <p>Nosso legado é construido com base na confiança de nossos clientes, na inovação constante e no
-                    compromisso en entregar mais do que mercadorias: entregamos tranquilidade e resultados.</p>
+                <p>
+                    Nosso legado é construido com base na confiança de nossos clientes, na inovação constante e no
+                    compromisso en entregar mais do que mercadorias: entregamos tranquilidade e resultados.
+                </p>
                     <br>
-                    <p><span>Escolha a Cargas Express e faça parte dessa história de sucesso. Solicite seu orçamento agora!</span></p>
-                </div>
+                <p><span>Escolha a Cargas Express e faça parte dessa história de sucesso. Solicite seu orçamento agora!</span></p>
             </div>
 
             <div class="servicos">
